juanas page second commit

--- a/6-9_personajes-juana.html
+++ b/6-9_personajes-juana.html
@@ -37,23 +37,24 @@
         </div>
     </nav>
     <header class="personajes-juana__header">
-        <div class="personajes-juana__header__text-zone">
+        <div class="personajes-juana__header__container">
+            <img src="img/personajes-juana_banner_background.png" class="personajes-juana__header__background" alt="">
             <img src="img/personajes-juana_banner_layer.png" class="personajes-juana__header__text-zone__img" alt="">
             <div class="personajes-juana__header__text">
                 <h1>JUANA, LU Y MATI</h1>
-                <p>¡ES SUPER ALEGRA Y DIVERTIDA! LE ENCANTA ESTAR CON SUS AMIGOS LU Y MATI.</p>
-            </div>            
-        </div>
-        <div class="personajes-juana__header__characters-img">
-            <img src="img/personajes-juana_banner_characters.png" class="personajes-juana__header__characters" alt="Personajes">
-        </div>
+                <p>SON AMIGXS Y COMPARTEN UN MONTÓN DE SITUACIONES DIVERTIDAS, ¿QUERÉS CONOCERLOS? ACÁ TE LOS PRESENTAMOS.</p>
+            </div>
+            <div class="personajes-juana__header__characters-img">
+                <img src="img/personajes-juana_banner_characters.png" class="personajes-juana__header__characters" alt="Personajes">
+            </div>
+        </div>        
     </header>
     <div class="personajes-juana__background">
         <section class="personajes-juana__presentation">
             <div class="personajes-juana__images__row">
                 <img src="img/personajes-juana_laugh.gif" alt="" class="personajes-juana__img__40">
                 <img src="img/personajes-juana_draw.png" alt="" class="personajes-juana__img__60">
-                <p class="personajes-juana__presentation__text">¡ES SUPER ALEGRA Y DIVERTIDA! LE ENCANTA ESTAR CON SUS AMIGOS LU Y MATI.<br>
+                <p class="personajes-juana__presentation__text">¡ES SUPER ALEGRE Y DIVERTIDA! LE ENCANTA ESTAR CON SUS AMIGOS LU Y MATI.<br>
                     LE GUSTA MUCHO LA MÚSICA.</p>
                 <img src="img/personajes-juana_portrait.png" alt="" class="personajes-juana__img__40">
                 <img src="img/personajes-juana_dance.gif" alt="" class="personajes-juana__img__60">
