famydoc add and la serie header redesing

--- a/6-9_personajes-juana.html
+++ b/6-9_personajes-juana.html
@@ -10,10 +10,10 @@
     <!-- googlefonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400;1,600&family=Nerko+One&display=swap" rel="stylesheet">
     <!-- end googlefonts -->
 
-    <title>YO QUIERO SABER, ¿Y VOS? | LA SERIE</title>
+    <title>YO QUIERO SABER, ¿Y VOS? | PERSONAJES</title>
 </head>
 <body>
     <nav class="nav">
