--- a/6-9_serie.html
+++ b/6-9_serie.html
@@ -10,7 +10,7 @@
     <!-- googlefonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400;1,600&family=Nerko+One&display=swap" rel="stylesheet">
     <!-- end googlefonts -->
 
     <title>YO QUIERO SABER, ¿Y VOS? | LA SERIE</title>
@@ -37,13 +37,16 @@
         </div>
     </nav>
     <header class="la-serie__header">
-        <div class="la-serie__header__text-zone">
+        <div class="la-serie__header__container">
+            <img src="img/la-serie_banner_background.png" class="la-serie__header__background" alt="">
             <img src="img/la-serie_banner_layer.png" class="la-serie__header__text-zone__img" alt="">
-            <p class="la-serie__header__text">MATI, JUANA Y LU SON AMIGXS Y COMPARTEN UN MONTÓN DE SITUACIONES DIVERTIDAS QUE LOS VAN A AYUDAR A VALORAR Y RESPETAR LAS DIFERENCIAS, A CONOCER SU CUERPO Y APRENDER A CUIDARLO, A IDENTIFICAR SITUACIONES QUE LES HACEN MAL Y A PODER COMUNICARLAS, A DEFENDER SUS DERECHOS Y SU INTIMIDAD Y A DISFRUTAR DE LA LIBERTAD DE SER COMO QUIEREN SER.</p>
-        </div>
-        <div class="la-serie__header__characters-img">
-            <img src="img/la-serie_banner_characters.png" class="la-seria__header__characters" alt="Personajes">
-        </div>
+            <div class="la-serie__header__text">
+                <p>MATI, JUANA Y LU SON AMIGXS Y COMPARTEN UN MONTÓN DE SITUACIONES DIVERTIDAS QUE LOS VAN A AYUDAR A VALORAR Y RESPETAR LAS DIFERENCIAS, A CONOCER SU CUERPO Y APRENDER A CUIDARLO, A IDENTIFICAR SITUACIONES QUE LES HACEN MAL Y A PODER COMUNICARLAS, A DEFENDER SUS DERECHOS Y SU INTIMIDAD Y A DISFRUTAR DE LA LIBERTAD DE SER COMO QUIEREN SER.</p>
+            </div>
+            <div class="la-serie__header__characters-img">
+                <img src="img/la-serie_banner_characters.png" class="la-serie__header__characters" alt="Personajes">
+            </div>
+        </div>        
     </header>
     <div class="la-serie__background">
         <section class="la-serie__chapters">
