first presentation completed

--- a/6-9_personajes-juana.html
+++ b/6-9_personajes-juana.html
@@ -29,9 +29,9 @@
                 <img src="img/nav_sponsors.png" alt="Contenidos Públicos, Paka Paka, Esi, Unicef" class="nav__img__sponsors">
             </div>
             <ul class="nav__bottom-list__sections">
-                <li class="nav__bottom-list-item__sections"><a href=""><img src="img/button_serie_normal.png" id="la-serie" alt=""></a></li>
+                <li class="nav__bottom-list-item__sections"><a href="6-9_serie.html"><img src="img/button_serie_normal.png" id="la-serie" alt=""></a></li>
                 <li class="nav__bottom-list-item__sections"><a href=""><img src="img/button_interactivo_normal.png" id="interactivo" alt=""></a></li>
-                <li class="nav__bottom-list-item__sections button__active__personajes"><a href=""><img src="img/button_personajes_normal.png" id="personajes" alt=""></a></li>
+                <li class="nav__bottom-list-item__sections button__active__personajes"><a href="6-9_personajes-juana.html"><img src="img/button_personajes_normal.png" id="personajes" alt=""></a></li>
                 <li class="nav__bottom-list-item__sections"><a href=""><img src="img/button_escribinos_normal.png" id="escribinos" alt=""></a></li>
             </ul>
         </div>
