--- a/6-9_serie.html
+++ b/6-9_serie.html
@@ -29,9 +29,9 @@
                 <img src="img/nav_sponsors.png" alt="Contenidos Públicos, Paka Paka, Esi, Unicef" class="nav__img__sponsors">
             </div>
             <ul class="nav__bottom-list__sections">
-                <li class="nav__bottom-list-item__sections button__active__la-serie"><a href=""><img src="img/button_serie_normal.png" id="la-serie" alt=""></a></li>
+                <li class="nav__bottom-list-item__sections button__active__la-serie"><a href="6-9_serie.html"><img src="img/button_serie_normal.png" id="la-serie" alt=""></a></li>
                 <li class="nav__bottom-list-item__sections"><a href=""><img src="img/button_interactivo_normal.png" id="interactivo" alt=""></a></li>
-                <li class="nav__bottom-list-item__sections"><a href=""><img src="img/button_personajes_normal.png" id="personajes" alt=""></a></li>
+                <li class="nav__bottom-list-item__sections"><a href="6-9_personajes-juana.html"><img src="img/button_personajes_normal.png" id="personajes" alt=""></a></li>
                 <li class="nav__bottom-list-item__sections"><a href=""><img src="img/button_escribinos_normal.png" id="escribinos" alt=""></a></li>
             </ul>
         </div>
@@ -51,20 +51,21 @@
     <div class="la-serie__background">
         <section class="la-serie__chapters">
             <div class="la-serie__chapters__row">
-                <img src="img/la-serie_chapter01.png" alt="" class="la-serie__chapters__video">
-                <img src="img/la-serie_chapter02.png" alt="" class="la-serie__chapters__video">
-                <img src="img/la-serie_chapter03.png" alt="" class="la-serie__chapters__video">
-                <img src="img/la-serie_chapter04.png" alt="" class="la-serie__chapters__video">
-                <img src="img/la-serie_chapter05.png" alt="" class="la-serie__chapters__video">
-                <img src="img/la-serie_chapter06.png" alt="" class="la-serie__chapters__video">
-                <img src="img/la-serie_chapter01.png" alt="" class="la-serie__chapters__video">
-                <img src="img/la-serie_chapter02.png" alt="" class="la-serie__chapters__video">
+                <img src="img/la-serie_chapter01.png" alt="" class="la-serie__chapters__video" id="button__la-serie__ch01">
+                <img src="img/la-serie_chapter02_hover.png" alt="" class="la-serie__chapters__video" id="button__la-serie__ch02">
+                <img src="img/la-serie_chapter03.png" alt="" class="la-serie__chapters__video" id="button__la-serie__ch03">
+                <img src="img/la-serie_chapter04.png" alt="" class="la-serie__chapters__video" id="button__la-serie__ch04">
+                <img src="img/la-serie_chapter05.png" alt="" class="la-serie__chapters__video" id="button__la-serie__ch05">
+                <img src="img/la-serie_chapter06.png" alt="" class="la-serie__chapters__video" id="button__la-serie__ch06">
+                <img src="img/la-serie_chapter07.png" alt="" class="la-serie__chapters__video" id="button__la-serie__ch07">
+                <img src="img/la-serie_chapter08.png" alt="" class="la-serie__chapters__video" id="button__la-serie__ch08">
             </div>
         </section>
         <footer>
             <img src="img/la-serie_footer_logos.png" class="la-serie_footer_logos" alt="">    
         </footer> 
     </div>
-    <script src="js/main.js"></script>   
+    <script src="js/main.js"></script>
+    <script src="js/la-serie_6-9.js"></script>   
 </body>
 </html>
