--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
             <img src="img/home_footer_logos.png" class="home__footer__logos" alt="">
         </footer>
     </div>    
-    <script src="js/main.js"></script>   
+    <script src="js/home.js"></script>   
 </body>
 </html>
